2010-05-24 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetGroupTest.py: Some cleanup in tests (use setUp, tearDown)
	and create temporary groups test files.

	* tests/NodeSetRegroupTest.py: Removed (tests moved to
	NodeSetGroupTest.py).

	* scripts/nodeset.py: Add -N option to avoid display of group source
	prefix (trac ticket #79).

	* NodeSet.py: Add noprefix boolean option to regroup() to avoid building
	nodegroups with group source prefixes. Added test.

	* scripts/clush.py: Fix unhandled GroupResolverSourceError exception (part
	of trac ticket #74).

	* scripts/nodeset.py: Renamed -n NAMESPACE option to -s GROUPSOURCE (or
	--groupsource=GROUPSOURCE). Fixed trac ticket #76 so that -f, -e or -c
	take -s into account. Improved error handling (trac ticket #74). Added
	--groupsources command to list configured group sources (trac #77).

2010-05-20 S. Thiell <stephane.thiell@cea.fr>

	* tests/NodeSetRegroupTest.py: added tests for nodeset.regroup().

2010-05-19 S. Thiell <stephane.thiell@cea.fr>

	* doc/extras/vim/ftdetect/clustershell.vim: renamed clush.vim to
	clustershell.vim.

	* doc/extras/vim/syntax/clushconf.vim: renamed clush.vim to clushconf.vim
	and cleaned up old external groups keywords.

	* doc/extras/vim/syntax/groupsconf.vim: added vim syntax file for
	groups.conf (trac ticket #73).

2010-04-08 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Added __getstate__() and __setstate__() methods to support
	pickling of NodeSet objects.

	* scripts/clush.py: Add option flag -n NAMESPACE to specify groups.conf(5)
	namespace to use for regrouping displayed nodeset.

	* scripts/clush.py: Add -r (--regroup) option to display default groups
	in nodeset when possible.

2010-04-07 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Modified script to support new external "all nodes"
	upcall and node groups.

	* scripts/nodeset.py: Added command flags -l (list groups), -r (used to