@@ -1,3 +1,7 @@
+2010-05-25 S. Thiell <stephane.thiell@cea.fr>
+
+	* scripts/clubak.py: Added regroup support to clubak (trac ticket #78).
+
 2010-05-24 S. Thiell <stephane.thiell@cea.fr>
 
 	* tests/NodeSetGroupTest.py: Some cleanup in tests (use setUp, tearDown)
